should document API changes and deprecations, and other "large"
changes that have an effect on users.  Bug fixes and minor changes
aren't documented here, unless the bug-fix has a major observable
effect.  If you change something in VXL, please document it here.

---------------------------------------------------------------------------
      - Added a sparse least squares function with sparse Levenberg Marquardt
         optimizer to vnl 

      - changed the interface of vnl_matrix_fixed get_row and get_column
        to return a vnl_vector_fixed

****************************
VXL 1.9.0	- July 2007
****************************
      - support for qt4 added to vgui

      - intersection methods & functions in vgl have been separated from classes
        and renamed to vgl_intersection. The new functions can be found in
        <vgl/vgl_intersection.h> and <vgl/algo/vgl_intersection.h>. The old
        intersection methods and functions have been deprecated.

      - Begun to switch vil error reporting to exception-based.

      - Added support for additional full loader/savers plug-ins to be added
        manually to the vil loader scheme.

      - Added an plug-in vil loader to save and load vimt_image_2d natively.

****************************
VXL 1.8.0	- March 2007
****************************

      - vbl_shared_pointer updated to allow base class conversions

*******************************
VXL 1.7.0	- November 2006
*******************************

      - intersection methods scattered in vgl are combined into
        vgl/algo/vgl_intersection.h. intersect(...) under
        vgl/vgl_box_3d and intersection(...) under vgl/vgl_line_3d_2_points
        are depracted and no longer available.

      - Added support for VC++ x64

*****************************
VXL 1.6.0	- August 2006
*****************************

      - vnl has been made thread safe, fixing a major weakness with
        vxl
